# ccoe.obs.solview

./: CHANGELOG.md  EXECUTIVE-SUMMARY.md  README.md  REPOSITORY-STRUCTURE.md  docker-compose.alloy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.MD
.github/pr-bodies/: CPL-5413-PR8.md
backend-processor/: Dockerfile  README.md  main.py  requirements.txt
backend-processor/src/: __init__.py
backend-processor/src/app/: __init__.py  environment.py  server.py
backend-processor/src/app/api/: __init__.py  analytics.py  errors.py  health.py  processor.py
backend-processor/src/app/services/: __init__.py  demo_client.py
config/: README.md  solview.env.example
demo-app/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
demo-app/src/app/: __init__.py  environment.py  server.py
demo-app/src/app/application/: app_builder.py
demo-app/src/app/application/rest/: catalog.py  errors.py  health.py  order.py
demo-app/src/app/domain/catalog/: service.py
docker/: README.md
docker/alloy/: config.alloy  config.river
docker/grafana/dashboard-configs/: correlation-dashboard.json  service-graph-fixed.json  solview-comprehensive-dashboard.json
docker/grafana/dashboards/: dashboards.yml
docker/grafana/datasources/: datasources.yml
docker/loki/: loki.yml
docker/otel-collector/: otel-collector.yml
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: solview-alerts.yml
docker/promtail/: promtail.yml
docker/tempo/: tempo.yml
docs/: README.md  architecture.md  best-practices.md  deployment-guide.md  instrumentation-guide.md  integration.md  logging.md  masking.md  metrics.md  testing.md  tracing.md
examples/fastapi/: main-prd.py  main-stg.py  main.py
scripts/: traffic_generator.py
solview/: __init__.py  settings.py
solview/common/: __init__.py  masking.py
solview/instrumentation/: __init__.py  business.py  http.py  kafka.py  utils.py
solview/metrics/: __init__.py  core.py  custom.py  exporters.py
solview/security/: __init__.py  masking.py
solview/solview_logging/: __init__.py  colors.py  core.py  masking.py  settings.py  sinks.py
solview/tracing/: __init__.py  core.py  propagators.py
tests/: conftest.py
tests/integration/: test_logging.py  test_metrics.py  test_trace.py
tests/metrics/: test_core.py  test_exporters.py  test_exporters_trace.py  test_metrics_call_method.py  test_metrics_exceptions.py  test_metrics_log_middleware.py  test_metrics_middleware.py  test_metrics_processing_time.py  test_metrics_trace_id.py
tests/solview_logging/: test_core.py  test_settings-2.py  test_settings.py  test_sink_ecs.py
tests/tracing/: test_core.py  test_instrument.py  test_propagators.py  test_protocol.py  test_setup_env.py
