[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solview"
version = "1.0.1"
description = "Observabilidade clara como o Sol"
authors = [
    { name = "Solfácil", email = "jefferson.martins@solfacil.com.br" },
    { name = "Solfácil", email = "marcelo.souza@solfacil.com.br" },
    { name = "Solfácil", email = "vitor.garcia@solfacil.com.br" }
]
requires-python = ">=3.9"
readme = "README.md"
# license = {text = "MIT"}
dependencies = [
    "loguru",
    "prometheus_client",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-exporter-otlp",
    "fastapi",
    "starlette",
    "pydantic",
    "python-dotenv",
    "orjson",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-httpx>=0.53b1",
    "opentelemetry-instrumentation-asyncpg>=0.53b1",
    "opentelemetry-instrumentation-logging>=0.53b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.53b1",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.40"
]

[tool.hatch.build.targets.sdist]
include = [
    "solview"
]

[tool.hatch.build.targets.wheel]
include = [
    "solview"
]
